Fixed typo. Releasing 2.0.1.

--- a/app/src/main/assets/www/info.html
+++ b/app/src/main/assets/www/info.html
@@ -21,8 +21,8 @@
         <div id="box1" class="box show">
             <div class="item">
 <div id="apply" class="z-depth__1" relative>
-    <div id="background"><img width="100%" src="./src/res/preview.jpg" size="50%"></div>
-    <div id="content">    <h1>Numix Circle - icon pack</h1>
+    <div id="background"><img width="100%" src="./src/res/background1.jpg" size="50%"></div>
+    <div id="content">    <h1>Numix Fold - icon pack</h1>
     <h3>Icon Pack made with &hearts; by <i>The Numix Project.</i></h3>
         
         </div>
